- Added single/multi threaded simple report generation

--- a/webui/src/app/pages/clients/clients_generation/clients_generation.component.html
+++ b/webui/src/app/pages/clients/clients_generation/clients_generation.component.html
@@ -40,6 +40,8 @@
 
                         </div>
 
+                        <button class="btn btn-success" (click)="getReport()">Generate report</button>
+
                     </mat-card-content>
                 </form>
             </mat-card>
@@ -86,6 +88,8 @@
                                           name="multiThreadedSaveToDatabase">Save to database ?</mat-checkbox>
 
                         </div>
+
+                        <button class="btn btn-success" (click)="getReportMT()">Generate report</button>
 
                     </mat-card-content>
                 </form>
