- Added client edit posibilities

--- a/webui/src/app/pages/clients/client_manage/client_manage.component.html
+++ b/webui/src/app/pages/clients/client_manage/client_manage.component.html
@@ -28,7 +28,7 @@
     <div (click)="delete(row.id)" class="d-flex justify-content-center btn btn-sm btn-outline-secondary">
         <clr-icon shape="trash" class="is-error"></clr-icon>
     </div>
-    <div (click)="edit(row.id)" class="d-flex justify-content-center btn btn-sm btn-outline-secondary">
+    <div (click)="edit(row)" class="d-flex justify-content-center btn btn-sm btn-outline-secondary">
         <clr-icon shape="edit"  class="is-info"></clr-icon>
     </div>
     <!--<button md-icon-button (click)="blockAgents(value)">
