--- a/webui/src/app/pages/clients/client_stats/client_stats.component.html
+++ b/webui/src/app/pages/clients/client_stats/client_stats.component.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="chart-box">
-        <h4> Orders By Country </h4>
+        <h4> Clients By Country </h4>
         <ngx-charts-bar-vertical
                 [view]="[990, 270]"
                 [barPadding]="1"
